[package]
name = "whirlwind"
version = "0.1.0"
edition = "2021"
authors = ["Logan A. Morrison"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { version = "0.12.1", features = ["serde"] }
anyhow = { version = "1.0.62", features = ["backtrace"] }
clap = { version = "3.2.17", features = ["derive", "unicode"] }
console = { version = "0.15.1", features = ["regex"] }
dialoguer = { version = "0.10.2", features = ["completion", "history", "fuzzy-select"] }
indicatif = "0.17.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
